# WebCamCap_old

./: CMakeLists.txt  Makefile  README.md  animation.cpp  animation.h  capturecamera.cpp  capturecamera.h  capturethread.cpp  capturethread.h  frame.cpp  frame.h  line.cpp  line.h  main.cpp  markerpoint.cpp  markerpoint.h  modelstructure.cpp  modelstructure.h  openglwindow.cpp  openglwindow.h  pointchecker.cpp  pointchecker.h  room.cpp  room.h  std_2d_vector.cpp  std_2d_vector.h  xkrajic4_sbapr.pro
.svn/: wc.db
Gui/: addcamera.cpp  addcamera.h  addcamera.ui  addcamera.ui~  addproject.cpp  addproject.h  addproject.ui  camwidget.cpp  camwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  structureeditor.cpp  structureeditor.h
